Needed some slight adjustments on the background functionality

--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@
     <div class="parallax-bg"></div>
     <!-- MAIN CONTENT STARTS -->
     <!-- <section class="vh-10"></section> -->
-    <div id="main-content" class="main-content w-100">
+    <div id="main-content" class="main-content container-fluid p-0">
 
         <!-- HERO SECTION -->
-        <section class="w-100 rvh-100 mt-5 pt-5 position-relative">
+        <section class="w-100 rvh-100 mt-5 pt-5 position-relative bg-primary">
 
             <!-- HERO VIDEO -->
             <video
