--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,12 @@
 
         <!-- NAV LINKS -->
         <ul class="nav-links flex-md-column flex-row m-md-0 my-2 ps-md-1 ps-0 mw-25 w-100 d-flex align-items-center justify-content-md-start justify-content-around">
-            <a href="/">
+            <a href="./">
                 <li class="nav rounded-2 px-2 border-box m-md-3">
                     Home
                 </li>
             </a>
-            <a href="/services.html">
+            <a href="./services.html">
                 <li class="nav rounded-2 px-2 border-box m-md-3">
                     Pricing
                 </li>
